<resources>
    <string name="app_name">SBaby</string>
    <string name="title">Hello</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="best_features_for_you">Best features for you!</string>
    <string name="add_task">Add task</string>
    <string name="in_progress">In progress</string>
    <string name="helper">Helper: \u0020</string>
    <string name="level">\u0020 level</string>
    <string name="user_name">User name</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="role_selection_info">This app is ideal for kids and parents who want to interact and complete tasks in a playful way</string>
    <string name="welcome">Welcome to SBaby!</string>
    <string name="i_m_a_child">I\'m a child</string>
    <string name="i_m_a_parent">I\'m a parent</string>
    <string name="code">Code:</string>
    <string name="login_in">Log In</string>
    <string name="sing_up">Sing up</string>
    <string name="sing_in_succ_mes">You are in!</string>
    <string name="passwords_not_match">Password doest not match</string>
    <string name="parent">Parent</string>
    <string name="weclome_to_sbaby">Welcome to SBaby!</string>
    <string name="i_do_not_have_an_account">I do not have an account</string>
    <string name="child">Child</string>
    <string name="parents_invitation">Your parents do not have this app?</string>
    <string name="premium">Premium</string>
    <string name="add_free">add-free</string>
    <string name="it_s_time_to_add_children">It\'s time to add children!</string>
    <string name="add_one_more">Add one more</string>
    <string name="finish">Finish</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="new_task">New task</string>
    <string name="title_hint">Title:</string>
    <string name="description">Description:</string>
    <string name="deadline">Deadline</string>
    <string name="photo">Photo</string>
    <string name="submit">Submit</string>
    <string name="prise">Prise:</string>
    <string name="Family">Family</string>
    <string name="Language">Language</string>
    <string name="Change_password">Change password</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Rate_the_app">Rate the app</string>
    <string name="Log_out">Log out</string>
    <string name="Wow_I_am">"Wow! I am "</string>
    <string name="share1">\" level Helper. Download and check out how much fun it is! Help your parents to get gifts and make your dreams come true!\"</string>
    <string name="share2">https://github.com/NyotaUhura/SugarBaby/tree/develop</string>
    <string name="need_to_be_done">Need to be done</string>
    <string name="need_agreement">Need Agreement</string>
</resources>