<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="190dp"
    android:minWidth="380dp"
    android:minHeight="370dp"
    app:cardBackgroundColor="@color/brown"
    app:cardCornerRadius="@dimen/corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextLarge"
            android:layout_marginBottom="20dp"
            android:text="@string/language" />

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="@color/custom_white"
            app:cardCornerRadius="@dimen/corner_radius">

            <TextView
                style="@style/TextLargeBold"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:text="@string/english"
                android:textAlignment="center" />

            <Button
                android:id="@+id/english_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_transparent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            app:cardBackgroundColor="@color/custom_white"
            app:cardCornerRadius="@dimen/corner_radius">

            <TextView
                style="@style/TextLargeBold"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:text="@string/ukrainian"
                android:textAlignment="center" />

            <Button
                android:id="@+id/ukrainian_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_transparent" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                style="@style/BottonBlueStyle"
                android:layout_marginRight="30dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok_button"
                style="@style/BottonBlueStyle"
                android:layout_marginLeft="30dp"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>