<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="120dp"
    app:cardBackgroundColor="@color/brown"
    app:cardCornerRadius="@dimen/corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextLarge"
            android:layout_marginBottom="20dp"
            android:text="@string/user_name" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/custom_white"
            app:cardCornerRadius="@dimen/corner_radius">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:background="@android:color/transparent"
                android:hint="Name:"
                android:singleLine="true" />
        </androidx.cardview.widget.CardView>


        <TextView
            style="@style/TextLarge"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/change_profile_photo" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="100dp"
            app:strokeColor="@color/custom_black"
            app:strokeWidth="10dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/gallery_photo_button"
            style="@style/BottonRedStyle"
            android:text="@string/choose_from_gallery" />

        <Button
            android:id="@+id/take_photo_button"
            style="@style/BottonRedStyle"
            android:text="Take photo now" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                style="@style/BottonBlueStyle"
                android:layout_marginRight="30dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok_button"
                style="@style/BottonBlueStyle"
                android:layout_marginLeft="30dp"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>