<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/parent_text_view"
                style="@style/LargeTitle"
                android:layout_marginLeft="20dp"
                android:text="@string/child"
                app:layout_constraintBottom_toBottomOf="@id/back"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="@id/back" />

            <TextView
                android:id="@+id/top_info"
                style="@style/LargeTitle"
                android:layout_marginRight="30dp"
                android:paddingVertical="27dp"
                android:text="@string/weclome_to_sbaby"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parent_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="75dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintStart_toEndOf="@id/top"
        app:layout_constraintTop_toBottomOf="@id/top">

        <EditText
            android:id="@+id/code_enter_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@android:color/transparent"
            android:hint="Code:"
            android:imeOptions="actionDone"
            android:paddingStart="10dp"
            android:singleLine="true" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/log_in"
        style="@style/RedHugeButtonStyle"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="50dp"
        android:minHeight="70dp"
        android:text="@string/login_in"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintStart_toEndOf="@id/code"
        app:layout_constraintTop_toBottomOf="@id/code" />


    <TextView
        android:id="@+id/task_body_text"
        style="@style/TextDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/parents_invitation"
        app:layout_constraintBottom_toTopOf="@id/sign_up"
        app:layout_constraintLeft_toLeftOf="@id/sign_up"
        app:layout_constraintRight_toRightOf="@id/sign_up" />

    <Button
        android:id="@+id/sign_up"
        style="@style/RedHugeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/light_blue"
        android:text="Send invitation"
        android:textColor="@color/custom_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>